user experentiel optimisé

--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ h1 {
     letter-spacing: .2rem;
 }
 
-p {
+h2 {
     -webkit-text-stroke: 0.5px rgb(0, 204, 255);
     position: absolute;
     top: 35%;
@@ -136,4 +136,12 @@ select{
     left:15%;
     font-family: "upheavtt";
    
+}
+
+p{
+
+font-size: 9px;
+text-align: center;
+color: gray;
+
 }
